レストランAPIをOpenAPIGeneratorに移行
